--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/bootstrap.css"/>
 </head>
 <body>
+<div class="navbar navbar-inverse"></div>
 <div class="container">
 	<h1>인덱스 페이지 입니다.</h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat architecto officia nam officiis eos, laboriosam, cumque aliquam rerum quas reprehenderit minima odit, maiores, consequatur delectus obcaecati eius quasi harum? Obcaecati!</p>
