index.html link added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <div class="container">
 	<h1>인덱스 페이지 입니다.</h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat architecto officia nam officiis eos, laboriosam, cumque aliquam rerum quas reprehenderit minima odit, maiores, consequatur delectus obcaecati eius quasi harum? Obcaecati!</p>
+	<a href="game.html">game.html</a>
 </div>
 <script src="js/jquery-3.3.1.js"></script>
 <script>
